Test/errors/err_simd_load_arg_count.cb
// simd<T,N>.load takes exactly (array, index).
extern int main()
{
    double[] a = new double[4];
    expect_error("simd<T,N>.load expects (array, index)") {
        auto v = simd<double,4>.load(a);
    }
}
